# loopo_ros2

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
action/: Home.action
loopo_actions/: package.xml  setup.cfg  setup.py
loopo_actions/launch/: loopo_action_servers_launch.py
loopo_actions/loopo_actions/: extension_actions.py
loopo_driver/: CMakeLists.txt  package.xml  setup.cfg  setup.py
loopo_driver/loopo_driver/: LoopO_driver.py  loopo_action_servers.py  loopo_driver.py  loopo_driver_node  loopo_driver_node.py
loopo_gripper/: LoopO_driver.py  extension_home_as.py  loopo_control_terms.py  loopo_extension_node.py  loopo_interface_node.py  loopo_node.py  testing.py
loopo_inteface/: setup.cfg
loopo_inteface/action/: MoveTo.action
loopo_inteface/msg/: ExtensionActuatorUpdate.msg  TwistActuatorUpdate.msg
loopo_interfaces/: CMakeLists.txt  package.xml  setup.cfg
loopo_interfaces/action/: Grasp.action
loopo_interfaces/srv/: SendCommand.srv
loopo_messages/: CMakeLists.txt  package.xml  setup.cfg
loopo_messages/action/: Grasp.action  Homing.action  Move.action  Twist.action
loopo_messages/msg/: LoopActuatorUpdate.msg  LoopOCommand.msg
loopo_messages/srv/: SendCommand.srv  SendLoopOCommand.srv
openmanipulator_x_loopo/: package.xml  setup.cfg  setup.py
openmanipulator_x_loopo/openmanipulator_x_loopo/scripts/: experiment_control.py
srv/: EnableDisableActuator.srv
